--- a/deployment/docker/package.json
+++ b/deployment/docker/package.json
@@ -10,9 +10,9 @@
   "license": "ISC",
   "devDependencies": {
     "grunt": "^1.0.1",
+    "terser": "^4.6.7",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-requirejs": "^1.0.0",
-    "grunt-contrib-uglify-es": "^3.3.0",
     "jasmine-core": "^3.1.0",
     "karma": "^2.0.2",
     "karma-jasmine": "^1.1.2",
