--- a/deployment/production/package.json
+++ b/deployment/production/package.json
@@ -12,12 +12,13 @@
     "grunt": "^1.0.1",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-requirejs": "^1.0.0",
-    "grunt-contrib-uglify-es": "^3.3.0",
+    "grunt-terser": "^1.0.0",
     "jasmine-core": "^3.1.0",
     "karma": "^2.0.2",
     "karma-jasmine": "^1.1.2",
     "karma-requirejs": "^1.1.0",
     "requirejs": "^2.3.5",
+    "terser": "^4.6.7",
     "uglify-es": "^3.3.9"
   }
 }
