--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -3,7 +3,7 @@ name: Build and Push Docker Image
 on: 
   push: 
     branches:
-      - develop
+      - '3.0'
 
 jobs:
   build:	
@@ -14,48 +14,8 @@ jobs:
     - name: Build and Publish the Docker Django Bims Image	
       uses: elgohr/Publish-Docker-Github-Action@master	
       with:	
-        name: ${{ secrets.IMAGE_DEVELOP_NAME }}:${{ secrets.IMAGE_DEVELOP_VERSION }}	
+        name: kartoza/kbims_uwsgi	
         workdir: deployment/production	
         username: ${{ secrets.DOCKER_USERNAME }}	
         password: ${{ secrets.DOCKER_PASSWORD }}	
-        buildargs: BIMS_TAG=develop	
-
-  build-freshwaterbiodiversity-image:	
-    name: Build and Push Docker Freshwaterbiodiversity Image	
-    needs: build	
-    runs-on: ubuntu-16.04	
-    steps:	
-    - uses: actions/checkout@master	
-      with: 	
-        repository: kartoza/kbims-healthyrivers	
-        ref: master	
-        fetch-depth: 1	
-        path: kbims-healthyrivers/	
-    - name: Build and Publish the Docker Freshwaterbiodiversity Image	
-      uses: elgohr/Publish-Docker-Github-Action@master	
-      with:	
-        name: ${{ secrets.IMAGE_FRESHWATERBIODIVERSITY_NAME }}:${{ secrets.IMAGE_DEVELOP_VERSION }}	
-        workdir: kbims-healthyrivers/deployment/production/uwsgi	
-        username: ${{ secrets.DOCKER_USERNAME }}	
-        password: ${{ secrets.DOCKER_PASSWORD }}	
-        buildargs: BIMS_TAG=latest
-  
-  update-freshwaterbiodiversity-rancher-stacks:
-    name: Update Rancher Stacks
-    needs: build-freshwaterbiodiversity-image
-    runs-on: ubuntu-16.04
-    steps:
-    - uses: actions/checkout@master
-      with:
-        repository: ${{ secrets.KARTOZA_RANCHER_SCRIPT_REPO }}
-        ref: ${{ secrets.KARTOZA_RANCHER_SCRIPT_REF }}
-        path: kartoza-rancher-scripts/
-    - uses: actions/setup-node@v1
-    - name: npm install, run node script
-      env:
-        rancherAccessKey: ${{ secrets.RANCHER_ACCESS_KEY }}
-        rancherSecretKey: ${{ secrets.RANCHER_SECRET_KEY }}
-      working-directory: ./kartoza-rancher-scripts
-      run: |
-        npm install
-        node rancher_scripts.js
+        buildargs: BIMS_TAG=v3.0	
