--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -14,8 +14,8 @@ jobs:
     - name: Build and Publish the Docker Django Bims Image	
       uses: elgohr/Publish-Docker-Github-Action@master	
       with:	
-        name: kartoza/kbims_uwsgi	
-        workdir: deployment/production	
+        name: kartoza/kbims_uwsgi:v3.0
+        workdir: deployment/production
         username: ${{ secrets.DOCKER_USERNAME }}	
         password: ${{ secrets.DOCKER_PASSWORD }}	
-        buildargs: BIMS_TAG=v3.0	
+        buildargs: BIMS_TAG=3.0	
