--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -18,4 +18,4 @@ jobs:
         workdir: deployment/production
         username: ${{ secrets.DOCKER_USERNAME }}	
         password: ${{ secrets.DOCKER_PASSWORD }}	
-        buildargs: BIMS_TAG=3.0	
+        buildargs: BIMS_TAG=3.x	
