--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -4,16 +4,21 @@ on:
   pull_request:
 
 jobs:
-  docker:
+  tests:
       runs-on: ubuntu-latest
+      services:
+        postis:
+          image: kartoza/postgis:9.6-2.4
+          env:
+            POSTGRES_USER: docker
+            POSTGRES_PASSWORD: docker
+            ALLOW_IP_RANGE: 0.0.0.0/0
+          ports:
+            - 5432:5432
+          options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
       steps:
       - uses: actions/checkout@v2
         with:
           submodules: 'recursive'
         name: Checkout
       - name: Build and Test
-        run: |
-          cd deployment
-          docker-compose -f docker-compose.test.yml up --build -d db-test uwsgi-test
-          sleep 30
-          docker-compose -f docker-compose.test.yml exec -T uwsgi-lite python manage.py test --verbosity=2
