--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -7,7 +7,7 @@ jobs:
   tests:
       runs-on: ubuntu-latest
       services:
-        postis:
+        postgis:
           image: kartoza/postgis:9.6-2.4
           env:
             POSTGRES_USER: docker
@@ -17,8 +17,12 @@ jobs:
             - 5432:5432
           options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
       steps:
-      - uses: actions/checkout@v2
-        with:
-          submodules: 'recursive'
-        name: Checkout
-      - name: Build and Test
+       - uses: actions/checkout@v1
+       - name: Set up Python 3.5.7
+       - uses: actions/setup-python@v1
+         with:
+          python-version: 3.5.7
+       - name: Install dependencies
+         run: pip install -r deployment/docker/requirements.txt
+       - name: Run tests
+         run: python manage.py test
