--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -8,7 +8,7 @@ jobs:
       runs-on: ubuntu-latest
       services:
         postgis:
-          image: kartoza/postgis:9.6-2.4
+          image: postgres
           env:
             POSTGRES_USER: docker
             POSTGRES_PASSWORD: docker
