--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -10,9 +10,9 @@ jobs:
         postgis:
           image: postgres
           env:
-            POSTGRES_USER: docker
-            POSTGRES_PASSWORD: docker
-            ALLOW_IP_RANGE: 0.0.0.0/0
+            - POSTGRES_USER: docker
+            - POSTGRES_PASSWORD: docker
+            - ALLOW_IP_RANGE: 0.0.0.0/0
           ports:
             - 5432:5432
           options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
