--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -5,24 +5,24 @@ on:
 
 jobs:
   tests:
-      runs-on: ubuntu-latest
-      services:
-        postgis:
-          image: postgres
-          env:
-            - POSTGRES_USER: docker
-            - POSTGRES_PASSWORD: docker
-            - ALLOW_IP_RANGE: 0.0.0.0/0
-          ports:
-            - 5432:5432
-          options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
-      steps:
-       - uses: actions/checkout@v1
-       - name: Set up Python 3.5.7
-       - uses: actions/setup-python@v1
-         with:
-          python-version: 3.5.7
-       - name: Install dependencies
-         run: pip install -r deployment/docker/requirements.txt
-       - name: Run tests
-         run: python manage.py test
+    runs-on: ubuntu-latest
+    services:
+      postgis:
+        image: kartoza/postgis:9.6-2.4
+        env:
+          POSTGRES_USER: docker
+          POSTGRES_PASSWORD: docker
+          ALLOW_IP_RANGE: 0.0.0.0/0
+        ports:
+          - 5432:5432
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+    steps:
+     - uses: actions/checkout@v1
+     - name: Set up Python 3.5.7
+     - uses: actions/setup-python@v1
+       with:
+        python-version: 3.5.7
+     - name: Install dependencies
+       run: pip install -r deployment/docker/requirements.txt
+     - name: Run tests
+       run: python manage.py test
