--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -19,7 +19,7 @@ jobs:
     steps:
      - uses: actions/checkout@v1
      - name: Set up Python 3.5.7
-     - uses: actions/setup-python@v1
+       uses: actions/setup-python@v1
        with:
         python-version: 3.5.7
      - name: Install dependencies
