--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -26,7 +26,8 @@ jobs:
        uses: actions/checkout@v2
        with:
         repository: GeoNode/geonode
-        ref: 3.0
+        fetch-depth: 1
+        ref: "3.0"
         path: geonode
      - name: Install dependencies
        run: |
