--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -30,8 +30,4 @@ jobs:
         ref: 3.1.x
         path: geonode
      - name: Install dependencies
-       run: |
-        pip3 install -r geonode/requirements.txt
-        pip3 install -r deployment/docker/REQUIREMENTS.txt
-     - name: Run tests
-       run: python manage.py test
+       run: ls -la
