--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -17,11 +17,13 @@ jobs:
           - 5432:5432
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
     steps:
-     - uses: actions/checkout@v1
      - name: Set up Python 3.7.10
        uses: actions/setup-python@v1
        with:
         python-version: 3.7.10
+     - uses: actions/checkout@v2
+       with:
+        path: bims
      - name: Checkout tools repo
        uses: actions/checkout@v2
        with:
