--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -38,7 +38,7 @@ jobs:
         pip3 install -r bims/deployment/docker/REQUIREMENTS.txt
      - name: Run tests
        env:
-         PYTHONPATH: bims;geonode
+         PYTHONPATH: /home/runner/work/django-bims/django-bims/bims;/home/runner/work/django-bims/django-bims/geonode
          DJANGO_SETTINGS_MODULE: core.settings.dev_docker
        working-directory: bims
        run: python manage.py test
