--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -36,9 +36,11 @@ jobs:
         pwd
         pip3 install -r geonode/requirements.txt
         pip3 install -r bims/deployment/docker/REQUIREMENTS.txt
+     - name: set pythonpath
+       run: |
+        echo "PYTHONPATH=/home/runner/work/django-bims/django-bims/bims;/home/runner/work/django-bims/django-bims/geonode" >> $GITHUB_ENV
      - name: Run tests
        env:
-         PYTHONPATH: /home/runner/work/django-bims/django-bims/bims;/home/runner/work/django-bims/django-bims/geonode
          DJANGO_SETTINGS_MODULE: core.settings.dev_docker
        working-directory: bims
        run: python manage.py test
