--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -6,16 +6,6 @@ on:
 jobs:
   tests:
     runs-on: ubuntu-latest
-    services:
-      postgis:
-        image: kartoza/postgis:9.6-2.4
-        env:
-          POSTGRES_USER: docker
-          POSTGRES_PASSWORD: docker
-          ALLOW_IP_RANGE: 0.0.0.0/0
-        ports:
-          - 5432:5432
-        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
     steps:
      - name: Set up Python 3.7.10
        uses: actions/setup-python@v1
@@ -31,14 +21,12 @@ jobs:
         fetch-depth: 1
         ref: 3.1.x
         path: geonode
-     - name: Install dependencies
-       run: |
-        pwd
-        pip3 install -r geonode/requirements.txt
-        pip3 install -r bims/deployment/docker/REQUIREMENTS.txt
      - name: set pythonpath
        run: |
-        echo "PYTHONPATH=/home/runner/work/django-bims/django-bims/bims;/home/runner/work/django-bims/django-bims/geonode" >> $GITHUB_ENV
+        echo "PYTHONPATH=/home/runner/work/django-bims/django-bims/geonode;/home/runner/work/django-bims/django-bims/bims" >> $GITHUB_ENV
+     - name: Use the value
+       run: |
+        echo "${{ env.PYTHONPATH }}" # This will output 'yellow'
      - name: Run tests
        env:
          DJANGO_SETTINGS_MODULE: core.settings.dev_docker
